# post

./: trash_lenght.py
airbyte_tutorial/: Makefile  readme.md
airflow_clean/main_dag/: main_dag.py
airflow_clean/package/function/: function.py
airflow_clean/package/operator_dag/: mini_dags.py  operator.py
desing_pattern/: adapter.py
dlt_project/: Makefile  pyproject.toml
dlt_project/api/: api_append_or_replace.py  bearer_token.py  dynamique.py  from_api.py  incremental_new_data.py  pagination.py  source.py  update_and_deduplicate.py
dlt_project/destination/: destination.py  versioned_dataset.py
dlt_project/quickstart/: test_api.py  test_csv_xls_pandas.py
dlt_project/ressource/: dependance_between_ressource.py  parralel_and_async.py  ressource.py  schema.py  standalone.py
dlt_project/rest_client/: basic.py  quick_start.py  rest_client_instance.py
hexagonal_ml/: adapters.py  api.py  application.py  domain.py  main.py  ports.py  pyproject.toml
langchain_tutorial/: .env  example.py  pyproject.toml
mlops/auto_tuning/: hyperot_tuning_example.py  optuna_template.py  tpot_digits_pipeline.py
mlops/drift/: drift.py  evidentlyai_exemple_project.py
mlops_book_udemy/: Makefile  pipeline_basic.py  pyproject.toml
mlops_book_udemy/auto_tuning/: tpot_template.py
mlops_book_udemy/mlflow_example/: mlflow_template.py  start-mlflow-server.sh
mlops_book_udemy/pipeline_sklearn/: template_ml_pipeline.py  template_ml_pipeline_func.py
pipeline_python/: pandas_cleaner.py  polar_clearner.py  pyproject.toml  reduce_normalise.py
template_amphi_etl/: Makefile  pyproject.toml  some_file.parquet  untitled.ampln
template_amphi_etl/.ipynb_checkpoints/: untitled-checkpoint.ampln  untitled1-checkpoint.ampln  untitled2-checkpoint.ampln
template_command_pattern/: app.py  pyproject.toml
template_delta_rs/: pyproject.toml  template.py
template_docker_newtype/: Dockerfile  Makefile  app.py  compose.yaml  gunicorn_config.py  pyproject.toml  requirements.txt
template_docker_newtype/docs/app/: openapi.yaml
template_docker_newtype/routers/: subapp_2.py
template_docker_newtype/tests/: conftest.py
template_fastapi/: Dockerfile  Makefile  app.py  gunicorn_config.py  pyproject.toml
template_fastapi/routers/: subapp_1.py  subapp_2.py
template_jinja_sqlglot/: preprocess.py  pyproject.toml
template_jinja_sqlglot/sql_template/: sql_template_delta.sql
template_mlflow_gcp_base/: launch_tlocal_racking.sh  pyproject.toml
template_mlflow_gcp_base/mlflow_model/: Makefile  conda.yaml  mlflow-pyfunc-example-refactoring.py  mlflow-pyfunc-example.py  mlflow-sklearn-example-refactoring.py  mlflow-sklearn-example.py  model.py  predict-using-sklearn-model.py  vectorizer.joblib
template_mlflow_gcp_base/mlflow_model/mlartifacts/146066897537316284/1ba431e340da4d8d8021f780ff8fc26c/artifacts/model/: MLmodel  model.pkl
template_mlflow_gcp_base/mlflow_model/mlartifacts/146066897537316284/fb74888648334ccfb75c45410c0215b8/artifacts/model/: MLmodel  conda.yaml  model.pkl
template_mlflow_gcp_base/mlflow_model/mlartifacts/228653946922160933/1636feedaf544afaba7cd0302c7011d7/artifacts/model/: MLmodel  model.pkl
template_mlflow_gcp_base/mlflow_model/mlartifacts/355538873902579275/516dfae4b17c41e88cc51e21bf9a3e1d/artifacts/model/: MLmodel  python_model.pkl
template_mlflow_gcp_base/mlflow_model/mlartifacts/355538873902579275/804f9299d4eb49b38c232b361b3d6476/artifacts/model/: MLmodel  conda.yaml
template_mlflow_gcp_base/mlflow_model_registry/: conda.yaml  config.py  fetch-model-from-registery.py  mlflow-registry-example-registry-simpler.py  mlflow-registry-example.py  vectorizer.joblib
template_mlflow_gcp_base/mlflow_project/: MLproject  mlflow-projects-example-refactoring.py  mlflow-projects-example.py  vectorizer.joblib
template_mlflow_gcp_base/tracking/: Makefile  README.md  tracking-with-refactoring.py  tracking.py
template_project_python/: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
template_project_python/app/submodule_1/: sub_app_1.py
template_project_python/app/submodule_2/: sub_app_2.py
template_project_python/test/: conftest.py
template_project_python/test/test_integration/: test_integration.py
template_project_python/test/test_unit/: test_unit.py
template_sqlglot/: main.py  pyproject.toml
template_typer/: Makefile  main.py  pyproject.toml  test_enum.py
template_typer/module/: others.py  users.py
template_typer/test/: test_app.py
template_typing/: exotique_typing.py
templates_csvkit/: pyproject.toml
templates_terraform_gcp_1/: README.md
templates_terraform_gcp_1/Basics/: backend.tf  outputs.tf  provider.tf  sample-basic-vm.tf  terraform.tfvars  variables.tf
templates_terraform_gcp_1/core/: backend.tf  main.tf  terraform.tfvars  variables.tf
templates_terraform_gcp_1/main/: baackend.tf  business_app_1_cloud_sql.tf  business_app_1_gcs.tf  business_app_1_healthcheck_glb.tf  business_app_1_healthcheck_igm.tf  business_app_1_instance_group.tf  business_app_1_instance_group_autoscaler.tf  business_app_1_instance_template.tf  business_app_1_load_balancer.tf  cloud_armor.tf  folders.tf  outputs.tf  projects.tf  provider.tf  remove-stuff.bat  restore-stuff.bat  secrets.tf  service_accounts.tf  terraform.tfvars  variables.tf  vms.tf  vpc.tf  vpc_firewall.tf  vpc_nat.tf
templates_terraform_gcp_1/main/archive/: business_app_1_vm_instances.tf  proj-infra-bapp1-prod-0.tf  proj-infra-iam-test-0.tf  proj-net-hub-prod-0.tf
templates_terraform_gcp_1/main/credentials/: here goes the json file.json
templates_terraform_gcp_1/main/iam/: baackend.tf  iam-proj-infra-bapp1-prod-0.tf  terraform.tfvars  variables.tf
templates_terraform_gcp_1/main/modules/projects/: main.tf  outputs.tf  variables.tf
templates_terraform_gcp_1/main/modules/vms/: data.tf  locals.tf  main.tf  outputs.tf  variables.tf
templates_terraform_gcp_1/main/scripts/bapp-1/: startup-script.sh
(+30 files in other folders)
