[tool.poetry]
name = "dlt-project"
version = "0.1.0"
description = ""
authors = ["jojopvcp <jonathan.ndamba@ext.groupepvcp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
dlt = {extras = ["duckdb"], version = "^0.4.12"}
pandas = "^2.2.2"
streamlit = "^1.36.0"
watchdog = "^4.0.1"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
