[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["jojopvcp <jonathan.ndamba@ext.groupepvcp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13.0"
alibi = "^0.9.6"
alibi-detect = {extras = ["torch"], version = "^0.12.0"}
scikit-learn = "^1.5.1"
shap = "^0.46.0"
evidently = "^0.4.36"
selenium = "^4.23.1"
hyperopt = "^0.2.7"
optuna = "^3.6.1"
tpot = "^0.12.2"
mlflow = "^2.15.1"
kfp = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
