[tool.poetry]
name = "template-command-pattern"
version = "0.1.0"
description = ""
authors = ["jojopvcp <jonathan.ndamba@ext.groupepvcp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
