[tool.poetry]
name = "template-jinja-sqlglot"
version = "0.1.0"
description = ""
authors = ["jojopvcp <jonathan.ndamba@ext.groupepvcp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
pydantic = "^2.8.2"
sqlglot = {extras = ["rs"], version = "^25.14.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
