[tool.poetry]
name = "template-sqlglot"
version = "0.1.0"
description = ""
authors = ["jojopvcp <jonathan.ndamba@ext.groupepvcp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlglot = {extras = ["rs"], version = "^25.15.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
