[tool.poetry]
name = "template-typer"
version = "0.1.0"
description = ""
authors = ["jojopvcp <jonathan.ndamba@ext.groupepvcp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"

[tool.poetry.scripts]
first-app = "main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
